integrated changes from WebTunnel SDK 1.4.1

--- a/platform/WebTunnel/samples/WebTunnelAgent/WebTunnelAgent.properties
+++ b/platform/WebTunnel/samples/WebTunnelAgent/WebTunnelAgent.properties
@@ -6,15 +6,13 @@
 # WebTunnel Configuration
 #
 
-webtunnel.deviceName = ${system.nodeName}
-
 # The domain UUID is used to associate the device with a user account.
-webtunnel.domain = 208da417-c81c-42b5-bc8a-c6c0951e4e57
+webtunnel.domain = 00000000-0000-0000-0000-000000000000
 
 # The device ID will be used to address the device and must
 # be unique. We use the system's Ethernet address as part
 # of the ID (${system.nodeId}).
-webtunnel.deviceId = 7e3cad30-e51d-4b46-8222-${system.nodeId}
+webtunnel.deviceId = c9eebed5-8705-4763-8822-${system.nodeId}
 
 # The IP address or domain name of the target device.
 webtunnel.host = 127.0.0.1
@@ -23,24 +21,23 @@ webtunnel.host = 127.0.0.1
 # Should include the port number of the device's web server
 # (usually 80, but can be another one). Can also include
 # SSH (22) or other TCP ports.
-webtunnel.ports = 9980, 5901
+webtunnel.ports = 80
 
 # The port number of the device's web server. Must only be
 # set if different from default HTTP port 80. Must also
 # be included in above webtunnel.ports list.
-webtunnel.httpPort = 9980
+webtunnel.httpPort = 80
 
 # The port number of the device's VNC server. 
 # Used to enable VNC support in the web interface.
 # Must also be included in above webtunnel.ports list.
-#webtunnel.vncPort = 5901
+# webtunnel.vncPort = 5900
 
 # The URL of the reflector server.
 # If your WebTunnelAgent build does not support SSL/TLS,
 # replace https with http. The connection between device
 # and reflector server will not be secure in that case.
 webtunnel.reflectorURI = https://reflector.my-devices.net
-#webtunnel.reflectorURI = https://reflector.mdvcs.net:8043
 
 # The username of the device. Consists of device ID and
 # domain UUID, separated by '@'.
@@ -58,12 +55,10 @@ webtunnel.connectTimeout = 10
 webtunnel.localTimeout = 7200
 
 # The timeout (seconds) for the WebTunnel connection to the reflector server.
-webtunnel.remoteTimeout = 20
+webtunnel.remoteTimeout = 900
 
 # The number of I/O threads the WebTunnelDispatcher should use.
 webtunnel.threads = 4
-
-webtunnel.status.notify = /bin/echo
 
 
 #
@@ -77,10 +72,10 @@ http.timeout = 30
 http.proxy.enable = false
 
 # The domain name of the proxy server.
-http.proxy.host = proxy.host.com
+http.proxy.host = proxy.nowhere.com
 
 # The port of the proxy server.
-http.proxy.port = 8080
+http.proxy.port = 80
 
 # The username for the proxy server, if required.
 http.proxy.username = 
@@ -103,10 +98,10 @@ http.proxy.password =
 tls.acceptUnknownCertificate = true
 
 # List of supported OpenSSL ciphers.
-tls.ciphers = ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS
+tls.ciphers = HIGH:!DSS:!aNULL@STRENGTH
 
 # Enable (true) or disable (false) extended (domain name) certificate validation.
-tls.extendedCertificateVerification = no
+tls.extendedCertificateVerification = true
 
 # Directory or file containing trusted root certificates.
 # Leave emtpy to use the system's default list.
@@ -122,7 +117,7 @@ tls.caLocation =
 #
 
 # Log level should be one of none, debug, information, notice, warning, error, critical or fatal.
-logging.loggers.root.level = debug
+logging.loggers.root.level = information
 
 # Use one of the loggers defined further down: console, syslog or file.
 logging.loggers.root.channel = console
