added Peripheral class, fixes

--- a/protocols/BtLE/Makefile-Library
+++ b/protocols/BtLE/Makefile-Library
@@ -12,7 +12,9 @@ INCLUDE += -I$(PROJECT_BASE)/devices/Devices/include
 
 objects = \
 	GATTClient \
-	BlueZGATTClient
+	BlueZGATTClient \
+	Peripheral \
+	PeripheralImpl
 
 target         = IoTBtLE
 target_version = 1
