--- a/devices/Makefile
+++ b/devices/Makefile
@@ -15,5 +15,6 @@ clean all:
 	$(MAKE) -C Simulation $(MAKECMDGOALS)
 	$(MAKE) -C Linux $(MAKECMDGOALS)
 	$(MAKE) -C XBeeSensor $(MAKECMDGOALS)
+	$(MAKE) -C SensorTag $(MAKECMDGOALS)
 	$(MAKE) -C GNSS/NMEA $(MAKECMDGOALS)
 	$(MAKE) -C GNSS $(MAKECMDGOALS)
