added Gyroscope and Magnetometer, simplified IO interface

--- a/devices/Devices/Makefile-Library
+++ b/devices/Devices/Makefile-Library
@@ -51,6 +51,18 @@ objects = Device DeviceException \
 	AccelerometerRemoteObject \
 	AccelerometerServerHelper \
 	AccelerometerSkeleton \
+	Gyroscope \
+	IGyroscope \
+	GyroscopeEventDispatcher \
+	GyroscopeRemoteObject \
+	GyroscopeServerHelper \
+	GyroscopeSkeleton \
+	Magnetometer \
+	IMagnetometer \
+	MagnetometerEventDispatcher \
+	MagnetometerRemoteObject \
+	MagnetometerServerHelper \
+	MagnetometerSkeleton \
 	IO \
 	IIO \
 	IOEventDispatcher \
