--- a/devices/Serial/Makefile-Library
+++ b/devices/Serial/Makefile-Library
@@ -13,7 +13,7 @@ INCLUDE += -I$(PROJECT_BASE)/devices/Devices/include
 # BeagleBone needs a special hack to enable
 # RS-485 RTS via GPIO. Try to detect BeagleBone
 # and enable hack.
-ifeq ($(findstring bone,$(shell uname -r),bone)
+ifeq ($(findstring bone,$(shell uname -r)),bone)
 $(info BeagleBone detected - enabling RS485 hack)
 MACCHINA_ENABLE_BEAGLEBONE_RS485_HACK = 1
 endif
