Build system fixes for POCO 1.7.0

--- a/devices/Devices/Makefile-Bundle
+++ b/devices/Devices/Makefile-Bundle
@@ -16,6 +16,6 @@ target         = io.macchina.devices
 target_version = 1
 target_libs    = IoTDevices PocoOSP PocoRemotingNG PocoUtil PocoXML PocoFoundation
 
-postbuild      = $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles Devices.bndlspec
+postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles Devices.bndlspec
 
 include $(POCO_BASE)/build/rules/dylib
