--- a/devices/GNSS/Makefile
+++ b/devices/GNSS/Makefile
@@ -20,6 +20,6 @@ target         = io.macchina.gnss.nmea
 target_version = 1
 target_libs    = IoTGNSSNMEA IoTSerial IoTDevices PocoGeo PocoOSP PocoUtil PocoXML PocoJSON PocoFoundation
 
-postbuild      = $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles GNSS.bndlspec
+postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles GNSS.bndlspec
 
 include $(POCO_BASE)/build/rules/dylib
