--- a/devices/Linux/Makefile
+++ b/devices/Linux/Makefile
@@ -18,6 +18,6 @@ target         = io.macchina.linux
 target_version = 1
 target_libs    = IoTDevices PocoRemotingNG PocoOSP PocoUtil PocoXML PocoFoundation
 
-postbuild      = $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles Linux.bndlspec
+postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles Linux.bndlspec
 
 include $(POCO_BASE)/build/rules/dylib
