--- a/devices/SensorTag/Makefile
+++ b/devices/SensorTag/Makefile
@@ -19,6 +19,6 @@ target         = io.macchina.btle.sensortag
 target_version = 1
 target_libs    = IoTBtLE IoTDevices PocoRemotingNG PocoOSP PocoUtil PocoXML PocoFoundation
 
-postbuild      = $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles SensorTag.bndlspec
+postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles SensorTag.bndlspec
 
 include $(POCO_BASE)/build/rules/dylib
