--- a/devices/XBeeSensor/Makefile
+++ b/devices/XBeeSensor/Makefile
@@ -19,6 +19,6 @@ target         = io.macchina.xbee.sensor
 target_version = 1
 target_libs    = IoTXBee IoTDevices PocoRemotingNG PocoOSP PocoUtil PocoXML PocoFoundation
 
-postbuild      = $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles XBeeSensor.bndlspec
+postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles XBeeSensor.bndlspec
 
 include $(POCO_BASE)/build/rules/dylib
