--- a/platform/OSP/Crypto/Makefile
+++ b/platform/OSP/Crypto/Makefile
@@ -16,7 +16,7 @@ target         = poco.crypto
 target_version = 1
 target_libs    = PocoCrypto PocoOSP PocoUtil PocoXML PocoFoundation
 
-postbuild      = $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles Crypto.bndlspec
+postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles Crypto.bndlspec
 
 include $(POCO_BASE)/build/rules/dylib
 	
