--- a/protocols/WebTunnel/Makefile
+++ b/protocols/WebTunnel/Makefile
@@ -16,6 +16,6 @@ target         = io.macchina.protocols.webtunnel
 target_version = 1
 target_libs    = PocoWebTunnel PocoOSP PocoNet PocoUtil PocoXML PocoJSON PocoFoundation
 
-postbuild      = $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles WebTunnel.bndlspec
+postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles WebTunnel.bndlspec
 
 include $(POCO_BASE)/build/rules/dylib
