--- a/server/macchina.properties
+++ b/server/macchina.properties
@@ -9,6 +9,10 @@ osp.web.sessionManager.cookiePersistence = transient
 
 osp.js.moduleSearchPaths = /ws/git/macchina-io/macchina.io/server/modules/;/ws/git/macchina-io/macchina.io/server/otherModules/;bndl://io.macchina.samples.tf-sensor
 
+# Note: unofficial list of V8 options can be found here:
+# https://github.com/thlorenz/v8-flags/blob/master/flags-0.11.md
+osp.js.v8.flags = --harmony;--use-strict
+
 #
 # Authentication
 #
