--- a/services/WebEvent/Makefile-Bundle
+++ b/services/WebEvent/Makefile-Bundle
@@ -16,6 +16,6 @@ target         = io.macchina.services.webevent
 target_version = 1
 target_libs    = IoTWebEvent PocoOSPWebEvent PocoOSPWeb PocoOSP PocoRemotingNG PocoUtil PocoXML PocoNet PocoFoundation
 
-postbuild      = $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles WebEvent.bndlspec
+postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles WebEvent.bndlspec
 
 include $(POCO_BASE)/build/rules/dylib
