--- a/webui/Devices/Makefile
+++ b/webui/Devices/Makefile
@@ -13,6 +13,6 @@ BUNDLE_TOOL = $(POCO_BASE)/OSP/BundleCreator/$(POCO_HOST_BINDIR)/bundle
 include $(POCO_BASE)/build/rules/global
 
 all:
-	$(BUNDLE_TOOL) -o../bundles Devices.bndlspec
+	$(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -o../bundles Devices.bndlspec
 
 clean:
