--- a/webui/Launcher/Makefile
+++ b/webui/Launcher/Makefile
@@ -25,11 +25,11 @@ target         = io.macchina.webui.launcher
 target_version = 1
 target_libs    = PocoOSPWeb PocoOSP PocoNet PocoUtil PocoXML PocoFoundation
 
-postbuild      = $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -Npng,gif,jpg -o../bundles Launcher.bndlspec
+postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -Npng,gif,jpg -o../bundles Launcher.bndlspec
 
 include $(POCO_BASE)/build/rules/dylib
 
 # Rule for runnning PageCompiler
 src/%.cpp: src/%.cpsp 
 	@echo "** Compiling Page" $<
-	$(PAGECOMPILER) --OSP $<
+	$(SET_LD_LIBRARY_PATH) $(PAGECOMPILER) --OSP $<
