--- a/devices/Serial/Makefile-Bundle
+++ b/devices/Serial/Makefile-Bundle
@@ -18,6 +18,6 @@ target         = io.macchina.serial
 target_version = 1
 target_libs    = IoTSerial IoTDevices PocoOSP PocoRemotingNG PocoUtil PocoXML PocoFoundation
 
-postbuild      = $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles Serial.bndlspec
+postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles Serial.bndlspec
 
 include $(POCO_BASE)/build/rules/dylib
