--- a/platform/OSP/BundleAdmin/Makefile
+++ b/platform/OSP/BundleAdmin/Makefile
@@ -17,6 +17,6 @@ target         = com.appinf.osp.bundleadmin
 target_version = 1
 target_libs    = PocoOSPWeb PocoOSP PocoNet PocoUtil PocoXML PocoFoundation
 
-postbuild      = $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles BundleAdmin.bndlspec
+postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles BundleAdmin.bndlspec
 
 include $(POCO_BASE)/build/rules/dylib
