--- a/platform/OSP/Data/Makefile
+++ b/platform/OSP/Data/Makefile
@@ -16,6 +16,6 @@ target         = poco.data
 target_version = 1
 target_libs    = PocoOSP PocoData PocoUtil PocoXML PocoFoundation
 
-postbuild      = $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles Data.bndlspec
+postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles Data.bndlspec
 
 include $(POCO_BASE)/build/rules/dylib
