--- a/platform/OSP/NetSSL_OpenSSL/Makefile
+++ b/platform/OSP/NetSSL_OpenSSL/Makefile
@@ -16,7 +16,7 @@ target         = poco.net.ssl
 target_version = 1
 target_libs    = PocoOSP PocoNetSSL PocoNet PocoUtil PocoXML PocoFoundation
 
-postbuild      = $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles NetSSL_OpenSSL.bndlspec
+postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles NetSSL_OpenSSL.bndlspec
 
 include $(POCO_BASE)/build/rules/dylib
 	
