--- a/platform/OSP/SecureWebServer/Makefile
+++ b/platform/OSP/SecureWebServer/Makefile
@@ -16,6 +16,6 @@ target         = osp.web.server.secure
 target_version = 1
 target_libs    = PocoOSPWeb PocoOSP PocoNetSSL PocoNet PocoUtil PocoXML PocoFoundation
 
-postbuild      = $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles SecureWebServer.bndlspec
+postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles SecureWebServer.bndlspec
 
 include $(POCO_BASE)/build/rules/dylib
