--- a/platform/OSP/SimpleAuth/Makefile
+++ b/platform/OSP/SimpleAuth/Makefile
@@ -16,6 +16,6 @@ target         = com.appinf.osp.simple-auth
 target_version = 1
 target_libs    = PocoOSP PocoUtil PocoJSON PocoXML PocoFoundation
 
-postbuild      = $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles SimpleAuth.bndlspec
+postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles SimpleAuth.bndlspec
 
 include $(POCO_BASE)/build/rules/dylib
