--- a/platform/OSP/Web/Makefile-Bundle
+++ b/platform/OSP/Web/Makefile-Bundle
@@ -16,6 +16,6 @@ target         = osp.web
 target_version = 1
 target_libs    = PocoOSPWeb PocoOSP PocoNet PocoUtil PocoXML PocoFoundation
 
-postbuild      = $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles WebBundle.bndlspec
+postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles WebBundle.bndlspec
 
 include $(POCO_BASE)/build/rules/dylib
