--- a/platform/OSP/WebEvent/Makefile-Bundle
+++ b/platform/OSP/WebEvent/Makefile-Bundle
@@ -16,6 +16,6 @@ target         = com.appinf.osp.webevent
 target_version = 1
 target_libs    = PocoOSPWebEvent PocoOSPWeb PocoOSP PocoNet PocoUtil PocoXML PocoFoundation
 
-postbuild      = $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles WebEventBundle.bndlspec
+postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles WebEventBundle.bndlspec
 
 include $(POCO_BASE)/build/rules/dylib
