--- a/platform/OSP/WebServer/Makefile
+++ b/platform/OSP/WebServer/Makefile
@@ -16,6 +16,6 @@ target         = osp.web.server
 target_version = 1
 target_libs    = PocoOSPWeb PocoOSP PocoNet PocoUtil PocoXML PocoFoundation
 
-postbuild      = $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles WebServer.bndlspec
+postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles WebServer.bndlspec
 
 include $(POCO_BASE)/build/rules/dylib
