--- a/protocols/MQTT/Makefile-Bundle
+++ b/protocols/MQTT/Makefile-Bundle
@@ -18,6 +18,6 @@ target         = io.macchina.mqtt.client
 target_version = 1
 target_libs    = IoTMQTT PocoOSP PocoRemotingNG PocoUtil PocoXML PocoFoundation PahoMQTT
 
-postbuild      = $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles MQTT.bndlspec
+postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles MQTT.bndlspec
 
 include $(POCO_BASE)/build/rules/dylib
