--- a/webui/AngularFileUpload/Makefile
+++ b/webui/AngularFileUpload/Makefile
@@ -13,6 +13,6 @@ BUNDLE_TOOL = $(POCO_BASE)/OSP/BundleCreator/$(POCO_HOST_BINDIR)/bundle
 include $(POCO_BASE)/build/rules/global
 
 all:
-	$(BUNDLE_TOOL) -o../bundles AngularFileUpload.bndlspec
+	$(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -o../bundles AngularFileUpload.bndlspec
 
 clean:
