--- a/webui/BundleAdmin/Makefile
+++ b/webui/BundleAdmin/Makefile
@@ -22,11 +22,11 @@ target         = io.macchina.webui.bundleadmin
 target_version = 1
 target_libs    = PocoOSPWeb PocoOSP PocoNet PocoUtil PocoJSON PocoXML PocoFoundation
 
-postbuild      = $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -Npng,gif,jpg -o../bundles BundleAdmin.bndlspec
+postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -Npng,gif,jpg -o../bundles BundleAdmin.bndlspec
 
 include $(POCO_BASE)/build/rules/dylib
 
 # Rule for runnning PageCompiler
 src/%.cpp: src/%.cpsp 
 	@echo "** Compiling Page" $<
-	$(PAGECOMPILER) --OSP $<
+	$(SET_LD_LIBRARY_PATH) $(PAGECOMPILER) --OSP $<
