--- a/webui/Console/Makefile
+++ b/webui/Console/Makefile
@@ -18,6 +18,6 @@ target         = io.macchina.webui.console
 target_version = 1
 target_libs    = PocoOSPWeb PocoOSP PocoNet PocoUtil PocoXML PocoFoundation
 
-postbuild      = $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -Npng,gif,jpg -o../bundles Console.bndlspec
+postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -Npng,gif,jpg -o../bundles Console.bndlspec
 
 include $(POCO_BASE)/build/rules/dylib
