--- a/webui/Playground/Makefile
+++ b/webui/Playground/Makefile
@@ -19,6 +19,6 @@ target         = io.macchina.webui.playground
 target_version = 1
 target_libs    = PocoOSPWeb PocoOSP PocoNet PocoZip PocoUtil PocoJSON PocoXML PocoFoundation
 
-postbuild      = $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -Npng,gif,jpg -o../bundles Playground.bndlspec
+postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -Npng,gif,jpg -o../bundles Playground.bndlspec
 
 include $(POCO_BASE)/build/rules/dylib
