--- a/platform/Makefile
+++ b/platform/Makefile
@@ -57,6 +57,7 @@ libexecs += \
     JS/V8-libexec JS/Core-libexec JS/Data-libexec JS/Bridge-libexec JS/Net-libexec \
     CodeGeneration-libexec RemotingNG-libexec RemotingNG/RemoteGen-libexec RemotingNG/TCP-libexec \
     OSP-libexec OSP/BundleCreator-libexec OSP/Web-libexec OSP/Core-libexec OSP/Crypto-libexec OSP/Data-libexec OSP/Data/SQLite-libexec OSP/Net-libexec OSP/NetSSL_OpenSSL-libexec OSP/SecureWebServer-libexec OSP/WebServer-libexec OSP/JS-libexec OSP/JS/Web-libexec OSP/WebEvent-libexec OSP/SimpleAuth-libexec \
+    OSP/RemotingNG/TCP-libexec \
     Geo-libexec
 tests    += CodeGeneration-tests RemotingNG-tests RemotingNG/TCP-tests OSP-tests OSP/Web-tests Geo-libexec
 samples  += WebTunnel-samples
@@ -65,6 +66,7 @@ cleans   += \
     JS/V8-clean JS/Core-clean JS/Data-clean JS/Bridge-clean JS/Net-clean \
     CodeGeneration-clean RemotingNG-clean RemotingNG/RemoteGen-clean RemotingNG/TCP-clean \
     OSP-clean OSP/BundleCreator-clean OSP/Web-clean OSP/Core-clean OSP/Crypto-clean OSP/Data-clean OSP/Data/SQLite-clean OSP/Net-clean OSP/NetSSL_OpenSSL-clean OSP/SecureWebServer-clean OSP/WebServer-clean OSP/JS-clean OSP/JS/Web-clean OSP/WebEvent-clean OSP/SimpleAuth-clean \
+    OSP/RemotingNG/TCP-clean \
     Geo-clean
 
 .PHONY: $(libexecs)
@@ -406,11 +408,17 @@ OSP/WebEvent-libexec:  Net-libexec OSP-libexec OSP/BundleCreator-libexec OSP/Web
 OSP/WebEvent-clean:
 	$(MAKE) -C $(POCO_BASE)/OSP/WebEvent clean
 
-OSP/SimpleAuth-libexec:  OSP-libexec OSP/BundleCreator-libexec
+OSP/SimpleAuth-libexec:  OSP-libexec OSP/BundleCreator-libexec 
 	$(MAKE) -C $(POCO_BASE)/OSP/SimpleAuth
 
 OSP/SimpleAuth-clean:
 	$(MAKE) -C $(POCO_BASE)/OSP/SimpleAuth clean
+	
+OSP/RemotingNG/TCP-libexec:  OSP-libexec OSP/BundleCreator-libexec RemotingNG/TCP-libexec
+	$(MAKE) -C $(POCO_BASE)/OSP/RemotingNG/TCP
+
+OSP/RemotingNG-clean:  
+	$(MAKE) -C $(POCO_BASE)/OSP/RemotingNG/TCP clean
 
 Geo-libexec:  Foundation-libexec
 	$(MAKE) -C $(POCO_BASE)/Geo
