--- a/server/macchina.properties
+++ b/server/macchina.properties
@@ -7,11 +7,10 @@ osp.data               = ${application.configDir}data
 osp.web.cacheResources = true
 osp.web.sessionManager.cookiePersistence = transient
 
-osp.js.moduleSearchPaths = /ws/git/macchina-io/macchina.io/server/modules/;/ws/git/macchina-io/macchina.io/server/otherModules/;bndl://io.macchina.samples.tf-sensor
-
 # Note: unofficial list of V8 options can be found here:
 # https://github.com/thlorenz/v8-flags/blob/master/flags-0.11.md
 osp.js.v8.flags = --harmony;--use-strict
+
 
 #
 # Authentication
@@ -83,15 +82,6 @@ webui.gnsstracking.refresh = 2
 
 
 #
-# Twilio
-#
-
-twilio.accountSID = AC7b7923e7b724126aa88bf7714835cb31
-twilio.authToken = db80f06706ac61ce48f69c3a7db25f08
-twilio.from = +16502004177
-
-
-#
 # MQTT
 #
 # Create a MQTT client that connects to the MQTT test server
@@ -99,32 +89,20 @@ twilio.from = +16502004177
 mqtt.clients.eclipse.serverURI = tcp://iot.eclipse.org:1883
 mqtt.clients.eclipse.clientId = macchina.io
 
-mqtt.clients.airvantage.serverURI = tcp://na.airvantage.net:1883
-mqtt.clients.airvantage.clientId = E2:40:D8:7F:1F:70
-mqtt.clients.airvantage.username = LL516402860102
-mqtt.clients.airvantage.password = macchina2112
+#mqtt.clients.aws-iot.serverURI = ssl://data.iot.us-west-2.amazonaws.com:8883
+#mqtt.clients.aws-iot.clientId = macchina
+#mqtt.clients.aws-iot.ssl.trustStore = ${application.configDir}aws-root.crt
+#mqtt.clients.aws-iot.ssl.keyStore = ${application.configDir}aws.crt
+#mqtt.clients.aws-iot.ssl.privateKey = ${application.configDir}aws.key
+#mqtt.clients.aws-iot.ssl.enabledCipherSuites = ALL:!ADH:!LOW:!EXP:!MD5:@STRENGTH
 
-mqtt.clients.tinamous.serverURI = tcp://obiltschnig.tinamous.com:1883
-mqtt.clients.tinamous.clientId = E2:40:D8:7F:1F:70
-mqtt.clients.tinamous.username = macchina.obiltschnig
-mqtt.clients.tinamous.password = Tommy55-boar
-
-mqtt.clients.local.serverURI = tcp://localhost:1883
-mqtt.clients.local.clientId = E2:40:D8:7F:1F:70
-
-mqtt.clients.aws-iot.serverURI = ssl://data.iot.us-west-2.amazonaws.com:8883
-mqtt.clients.aws-iot.clientId = macchina
-mqtt.clients.aws-iot.ssl.trustStore = ${application.configDir}aws-root.crt
-mqtt.clients.aws-iot.ssl.keyStore = ${application.configDir}aws.crt
-mqtt.clients.aws-iot.ssl.privateKey = ${application.configDir}aws.key
-mqtt.clients.aws-iot.ssl.enabledCipherSuites = ALL:!ADH:!LOW:!EXP:!MD5:@STRENGTH
 
 #
 # XBee
 #
-xbee.ports.1.device = /dev/tty.usbserial-000013FA
-xbee.ports.1.speed = 115200
-xbee.sensors.lth.id = 0013A20040A4D7F7
+#xbee.ports.1.device = /dev/tty.usbserial-000013FA
+#xbee.ports.1.speed = 115200
+#xbee.sensors.lth.id = 0013A20040A4D7F7
 
 
 #
@@ -147,7 +125,7 @@ webtunnel.password =
 # for more information.
 #
 logging.loggers.root.channel = splitter
-logging.loggers.root.level = debug
+logging.loggers.root.level = information
 
 logging.loggers.remoting.name = RemotingNG
 logging.loggers.remoting.level = notice
