added support for native JavaScript modules

--- a/platform/JS/Core/Makefile
+++ b/platform/JS/Core/Makefile
@@ -15,7 +15,7 @@ CXXFLAGS += -DPOCO_JS_V8VERSION=$(V8VERSION)
 objects = Wrapper PooledIsolate \
 	LoggerWrapper ConsoleWrapper SystemWrapper DateTimeWrapper LocalDateTimeWrapper \
 	ConfigurationWrapper ApplicationWrapper URIWrapper TimerWrapper \
-	BufferWrapper JSExecutor JSException
+	BufferWrapper JSExecutor JSException Module ModuleRegistry
 
 target         = PocoJSCore
 target_version = 1
