--- a/platform/OSP/JS/Makefile-Library
+++ b/platform/OSP/JS/Makefile-Library
@@ -12,7 +12,9 @@ objects = JSExecutor \
 	JSExtensionPoint \
 	BundleWrapper \
 	ServiceRegistryWrapper \
-	ServiceRefWrapper
+	ServiceRefWrapper \
+	ModuleFactory \
+	ModuleExtensionPoint 
 
 target         = PocoOSPJS
 target_version = 3
