--- a/platform/JS/V8/Makefile
+++ b/platform/JS/V8/Makefile
@@ -52,7 +52,7 @@ endif
 
 ifeq ($(findstring clang,$(CXX)),clang)
 GYP_DEFINES += clang=1
-CXX += -Wno-tautological-undefined-compare -Wno-inconsistent-missing-override
+CXX += -Wno-tautological-undefined-compare -Wno-inconsistent-missing-override -Wno-shift-negative-value
 endif
 
 export GYP_DEFINES
