jsrun: terminate script when application is stopped

--- a/platform/JS/samples/jsrun/Makefile
+++ b/platform/JS/samples/jsrun/Makefile
@@ -12,6 +12,6 @@ objects = jsrun
 
 target         = jsrun
 target_version = 1
-target_libs    = v8 PocoJSNet PocoJSData PocoJSCore PocoUtil PocoXML PocoNet PocoDataSQLite PocoData PocoRemotingNG PocoFoundation
+target_libs    = v8 PocoJSNet PocoJSData PocoJSCore PocoNetSSL PocoCrypto PocoNet PocoDataSQLite PocoData PocoRemotingNG PocoUtil PocoXML PocoJSON PocoFoundation
 
 include $(POCO_BASE)/build/rules/exec
