improved handling of log messages as device status source

--- a/server/Makefile
+++ b/server/Makefile
@@ -12,6 +12,6 @@ objects = MacchinaServer
 
 target         = macchina
 target_version = 1
-target_libs    = PocoOSP PocoZip PocoNet PocoUtil PocoJSON PocoXML PocoFoundation
+target_libs    = PocoOSP PocoZip PocoUtil PocoJSON PocoXML PocoFoundation
 
 include $(POCO_BASE)/build/rules/exec
