--- a/services/Makefile
+++ b/services/Makefile
@@ -11,3 +11,4 @@
 clean all:
 	$(MAKE) -C WebEvent $(MAKECMDGOALS)
 	$(MAKE) -C DeviceStatus $(MAKECMDGOALS)
+	$(MAKE) -C NetworkEnvironment $(MAKECMDGOALS)
