moved SerialPort class from macchina/devices into platform

--- a/devices/Serial/Makefile
+++ b/devices/Serial/Makefile
@@ -3,11 +3,21 @@
 #
 # $Id$
 #
-# Makefile for macchina.io Serial Device 
+# Makefile for macchina.io Serial bundle
 #
 
-.PHONY: bundle
-clean all: bundle
-bundle:
-	$(MAKE) -f Makefile-Library $(MAKECMDGOALS)
-	$(MAKE) -f Makefile-Bundle $(MAKECMDGOALS)
+BUNDLE_TOOL = $(POCO_BASE)/OSP/BundleCreator/$(POCO_HOST_BINDIR)/bundle
+
+include $(POCO_BASE)/build/rules/global
+
+INCLUDE += -I$(PROJECT_BASE)/devices/Devices/include
+
+objects = SerialDeviceImpl BundleActivator
+
+target         = io.macchina.serial
+target_version = 1
+target_libs    = IoTDevices PocoSerial PocoOSP PocoRemotingNG PocoUtil PocoXML PocoFoundation
+
+postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles Serial.bndlspec
+
+include $(POCO_BASE)/build/rules/dylib
