--- a/platform/Makefile
+++ b/platform/Makefile
@@ -58,8 +58,9 @@ libexecs += \
     CodeGeneration-libexec RemotingNG-libexec RemotingNG/RemoteGen-libexec RemotingNG/TCP-libexec \
     OSP-libexec OSP/BundleCreator-libexec OSP/Web-libexec OSP/Core-libexec OSP/Crypto-libexec OSP/Data-libexec OSP/Data/SQLite-libexec OSP/Net-libexec OSP/NetSSL_OpenSSL-libexec OSP/SecureWebServer-libexec OSP/WebServer-libexec OSP/JS-libexec OSP/JS/Web-libexec OSP/JS/Scheduler-libexec OSP/WebEvent-libexec OSP/SimpleAuth-libexec \
     OSP/RemotingNG/TCP-libexec \
-    Geo-libexec
-tests    += CodeGeneration-tests RemotingNG-tests RemotingNG/TCP-tests OSP-tests OSP/Web-tests Geo-libexec
+    Geo-libexec \
+    Serial-libexec
+tests    += CodeGeneration-tests RemotingNG-tests RemotingNG/TCP-tests OSP-tests OSP/Web-tests Geo-tests
 samples  += WebTunnel-samples
 cleans   += \
     WebTunnel-clean \
@@ -67,7 +68,8 @@ cleans   += \
     CodeGeneration-clean RemotingNG-clean RemotingNG/RemoteGen-clean RemotingNG/TCP-clean \
     OSP-clean OSP/BundleCreator-clean OSP/Web-clean OSP/Core-clean OSP/Crypto-clean OSP/Data-clean OSP/Data/SQLite-clean OSP/Net-clean OSP/NetSSL_OpenSSL-clean OSP/SecureWebServer-clean OSP/WebServer-clean OSP/JS-clean OSP/JS/Web-clean OSP/JS/Scheduler-clean OSP/WebEvent-clean OSP/SimpleAuth-clean \
     OSP/RemotingNG/TCP-clean \
-    Geo-clean
+    Geo-clean \
+    Serial-clean
 
 .PHONY: $(libexecs)
 .PHONY: $(tests)
@@ -435,6 +437,12 @@ Geo-tests: Geo-libexec cppunit
 Geo-clean:
 	$(MAKE) -C $(POCO_BASE)/Geo clean
 	$(MAKE) -C $(POCO_BASE)/Geo/testsuite clean
+
+Serial-libexec:  Foundation-libexec
+	$(MAKE) -C $(POCO_BASE)/Serial
+
+Serial-clean:
+	$(MAKE) -C $(POCO_BASE)/Serial clean
 
 clean: cleans CppUnit-clean
 
