--- a/protocols/Modbus/Makefile-Bundle
+++ b/protocols/Modbus/Makefile-Bundle
@@ -17,7 +17,7 @@ objects = BundleActivator
 
 target         = io.macchina.modbus
 target_version = 1
-target_libs    = IoTModbus IoTSerial IoTDevices PocoOSP PocoRemotingNG PocoUtil PocoXML PocoFoundation
+target_libs    = IoTModbus IoTDevices PocoSerial PocoOSP PocoRemotingNG PocoUtil PocoXML PocoFoundation
 
 postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles Modbus.bndlspec
 
