--- a/protocols/Modbus/Makefile-Library
+++ b/protocols/Modbus/Makefile-Library
@@ -25,6 +25,6 @@ objects = \
 
 target         = IoTModbus
 target_version = 1
-target_libs    = IoTSerial IoTDevices PocoRemotingNG PocoOSP PocoUtil PocoXML PocoJSON PocoFoundation
+target_libs    = IoTDevices PocoSerial PocoRemotingNG PocoOSP PocoUtil PocoXML PocoJSON PocoFoundation
 
 include $(POCO_BASE)/build/rules/lib
