--- a/protocols/XBee/Makefile-Bundle
+++ b/protocols/XBee/Makefile-Bundle
@@ -17,7 +17,7 @@ objects = XBeeNodeImpl BundleActivator
 
 target         = io.macchina.xbee
 target_version = 1
-target_libs    = IoTXBee IoTSerial IoTDevices PocoOSP PocoRemotingNG PocoUtil PocoXML PocoFoundation
+target_libs    = IoTXBee IoTDevices PocoSerial PocoOSP PocoRemotingNG PocoUtil PocoXML PocoFoundation
 
 postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles XBee.bndlspec
 
