--- a/platform/JS/V8/v8/Makefile
+++ b/platform/JS/V8/v8/Makefile
@@ -260,16 +260,10 @@ ANDROID_ARCHES = android_ia32 android_x64 android_arm android_arm64 \
 NACL_ARCHES = nacl_ia32 nacl_x64
 
 # List of files that trigger Makefile regeneration:
-GYPFILES = third_party/icu/icu.gypi third_party/icu/icu.gyp \
-	   gypfiles/shim_headers.gypi gypfiles/features.gypi \
-           gypfiles/standalone.gypi \
-	   gypfiles/toolchain.gypi gypfiles/all.gyp gypfiles/mac/asan.gyp \
-	   test/cctest/cctest.gyp test/fuzzer/fuzzer.gyp \
-	   test/unittests/unittests.gyp src/v8.gyp \
-	   tools/parser-shell.gyp testing/gmock.gyp testing/gtest.gyp \
-	   buildtools/third_party/libc++abi/libc++abi.gyp \
-	   buildtools/third_party/libc++/libc++.gyp samples/samples.gyp \
-	   src/third_party/vtune/v8vtune.gyp src/d8.gyp
+GYPFILES = gypfiles/shim_headers.gypi gypfiles/features.gypi \
+	gypfiles/standalone.gypi \
+	gypfiles/toolchain.gypi gypfiles/all.gyp gypfiles/mac/asan.gyp \
+	src/v8.gyp
 
 # If vtunejit=on, the v8vtune.gyp will be appended.
 ifeq ($(vtunejit), on)
